update video settings

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<title>Self-Supervised Policy Adaptation during Deployment</title>
 	<meta property="og:title" content="Self-Supervised Policy Adaptation during Deployment">
 	<meta property="og:description" content="Anonymized website for the PAD method for generalization in RL.">
-	<meta property="og:image" content="https://gtJZio9kuey3bL2Qn2426DvquU6Y4wQM.github.io/ICLR2021_Anonymized_PAD/method.png">
+	<meta property="og:image" content="method.png">
 	<meta property="og:url" content="https://gtJZio9kuey3bL2Qn2426DvquU6Y4wQM.github.io/ICLR2021_Anonymized_PAD/">
 	<meta name="twitter:card" content="summary_large_image">
 	<style>
@@ -52,7 +52,7 @@ a.btn-right {border-radius: 0 6px 6px 0;}
 			<tr>
 				<td>
 					<h4>
-						<a href="~" class="nobreak">Anonymous authors</a>
+						<a href="#" class="nobreak">Anonymous authors</a>
 					</h4>
 				</td>
 			</tr>
@@ -131,7 +131,7 @@ a.btn-right {border-radius: 0 6px 6px 0;}
 		<p>
 			During real world deployment of learned policies, reward signals are typically inaccessible. We propose a framework for Policy Adaptation during Deployment using self-supervision, which does not require a reward signal and allows for fast adaptation to diverse and continuously changing environments. Our method requires no prior knowledge about the nature of environment changes and - crucially - we also show that our method generally does not degrade the performance of a policy in its original training environment.
 		</p>
-		<video playsinline="" preload="" width="100%">
+		<video width="100%">
 			<source src="overview.mp4" type="video/mp4"/>
 		</video>
 		<!-- <div class="youtube">
