--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ sub, sup {line-height: 0;}
 .youtube {position: relative;}
 .youtube iframe {margin: auto; display: block; margin-top: 48px;}
 .content-video {width: 100%; margin: 0; text-align: center;}
-.content-video-container {width: 100%; max-width: 900px; margin: auto}
+.content-video-container {width: 100%; max-width: 900px; margin: auto;}
 .legend {display: inline-block; border: 1px solid #eaeaea; padding: 8px; margin-top: 12px; text-align: center;}
 .legend-item {display: inline-block; margin-left: 6px; margin-right: 6px; font-size: 12px;}
 .legend-symbol {font-weight: bold; margin-right: 6px; font-size: 20px;}
@@ -129,26 +129,24 @@ div.spacing {width: 100%; height: 80px;}
 	<div>
 		<h2>Robotic manipulation</h2>
 		<p>
-			We train policies in simulation and deploy on a real robot, operating solely from an uncalibrated camera. PAD transfers successfully and can adapt to a variety of real-world environments.
+			We train policies in simulation and deploy on a real robot, operating solely from an uncalibrated camera. PAD transfers successfully and can adapt to a variety of real-world environments, including environmental changes such as table cloths and disco lights.
 		</p>
-		<!-- <div class="content-video">
+		<div class="content-video">
+			<h3 class="bold" style="margin-top: 48px;">Reach</h3>
 			<div class="content-video-container">
-				<video playsinline="" autoplay="" loop="" preload="" muted="" width="100%">
-					<source src="non_stationary_experiments_25s.mp4" type="video/mp4"/>
+				<video playsinline="" autoplay="" loop="" preload="" muted="" width="60%">
+					<source src="reach.mp4" type="video/mp4"/>
 				</video>
 			</div>
-			<div class="legend">
-				<div class="legend-item">
-					<span class="legend-symbol noselect" style="color: rgba(44,160,44,0.75)">--</span><span class="legend-symbol" style="color: rgba(214,39,40,0.75)">--</span><span class="legend-symbol" style="color: rgba(31,119,180,0.75)">--</span>SAC+IDM
-				</div>
-				<div class="legend-item">
-					<span class="legend-symbol noselect" style="color: rgba(186,176,172,0.75)">--</span>CURL (Srinivas et al.)
-				</div>
-				<div class="legend-item">
-					<span class="legend-symbol noselect" style="color: rgba(44,160,44,1)">—</span><span class="legend-symbol" style="color: rgba(214,39,40,1)">—</span><span class="legend-symbol" style="color: rgba(31,119,180,1)">—</span><span class="bold">SAC+IDM (PAD)</span>
-				</div>
+		</div>
+		<div class="content-video">
+			<h3 class="bold" style="margin-top: 48px;">Push</h3>
+			<div class="content-video-container">
+				<video playsinline="" autoplay="" loop="" preload="" muted="" width="60%">
+					<source src="push.mp4" type="video/mp4"/>
+				</video>
 			</div>
-		</div> -->
+		</div>
 	</div>
 	<div class="spacing"></div>
 </div>
