--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ div.spacing {width: 100%; height: 80px;}
 	<div>
 		<h2>Robotic manipulation</h2>
 		<p>
-			We train policies in simulation and deploy on a real robot, operating solely from an uncalibrated camera. PAD transfers successfully and can adapt to a variety of real-world environments, including environmental changes such as table cloths and disco lights.
+			We train policies in simulation and deploy on a real robot, operating solely from an uncalibrated camera. Policy Adaptation during Deployment (PAD) transfers successfully and can adapt to a variety of real-world environments, including environmental changes such as table cloths and disco lights.
 		</p>
 		<div class="content-video">
 			<h3 class="bold" style="margin-top: 48px;">Reach</h3>
